--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -28,6 +28,7 @@
 import /vendor/etc/init/hw/init.qcom.usb.rc
 import /vendor/etc/init/hw/init.msm.usb.configfs.rc
 import /vendor/etc/init/hw/init.target.rc
+import /vendor/etc/init/hw/init.asus.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
@@ -72,6 +73,14 @@ on early-boot
     write /sys/kernel/boot_cdsp/boot 1
     write /sys/kernel/boot_slpi/boot 1
     exec u:r:qti_init_shell:s0 -- /vendor/bin/init.qcom.early_boot.sh
+
+    # set wifi link file.
+    setprop wlan.driver.ath 0
+    setprop wlan.driver.status unloaded
+    setprop wlan.softap.driver.status unloaded
+    setprop persist.debug.wifi_user_list 1
+    setprop wlan.driver.config /vendor/firmware/wlan/qca_cld/WCNSS_qcom_cfg.ini
+    write /proc/sys/net/ipv4/tcp_mtu_probing 2
 
     # for backward compatibility
     chown system system /persist/sensors
@@ -395,6 +404,7 @@ on post-fs-data
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
     #Create the symlink to qcn wpa_supplicant folder for ar6000 wpa_supplicant
+    mkdir /data/system 0775 system system
     #symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
 
     #Create directories for Location services
@@ -425,6 +435,9 @@ on post-fs-data
     #Create directory for FOTA
     mkdir /data/fota 0771
     chown system system /data/fota
+
+    #Create directory for hostapd
+    mkdir /data/hostapd 0770 system wifi
 
     # Create /data/time folder for time-services
     mkdir /data/vendor/time/ 0700 system system
@@ -489,27 +502,6 @@ on post-fs-data
 
     #Start move time data to /data/vendor once post-fs-data done
     start vendor.move_time_data
-
-# Huaqin add for bt/wifi prop by zhouyingchen at 2018/03/23 start
-service nvram_btwifi /system/bin/nvram_btwifi
-    user root
-    group system oem_2901
-    oneshot
-    disabled
-
-on property:sys.boot_completed=1
-    start nvram_btwifi
-
-on property:sys.nvram.btmac=*
-    start vendor-btmac-sh
-    restart vendor.bluetooth-1-0-qti
-# Huaqin add for bt/wifi prop by zhouyingchen at 2018/03/23 end
-
-service vendor-btmac-sh  /vendor/bin/init.btmac.sh
-    class core
-    user root
-    oneshot
-    disabled
 
 service nqnfcinfo /vendor/bin/nqnfcinfo
     class late_start
@@ -762,7 +754,7 @@ on property:sys.sysctl.tcp_adv_win_scale=*
     write /proc/sys/net/ipv4/tcp_adv_win_scale ${sys.sysctl.tcp_adv_win_scale}
 
 service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
-    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 -dd \
+    -O/data/vendor/wifi/wpa/sockets -puse_p2p_group_interface=1 \
     -g@android:vendor_wpa_wlan0
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
@@ -775,11 +767,18 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     disabled
     oneshot
 
-# Data Migration
-service vendor.move_wifi_data /system/bin/move_wifi_data.sh
+service vendor.wigig_supplicant /vendor/bin/hw/wpa_supplicant \
+    -iwigig0 -Dnl80211 -c/data/vendor/wifi/wigig_supplicant.conf \
+    -m/data/vendor/wifi/wigig_p2p_supplicant.conf \
+    -O/data/vendor/wifi/wigig_sockets -dd \
+    -e/data/vendor/wifi/wigig_entropy.bin -g@android:wpa_wigig0 \
+    -S wigigsvc
+    #   we will start as root and wpa_supplicant will switch to user wifi
+    #   after setting up the capabilities required for WEXT
+    #   user wifi
+    #   group wifi inet keystore
     class main
-    user  wifi
-    group wifi
+    socket wpa_wigig0 dgram 660 wifi wifi
     disabled
     oneshot
 
@@ -822,6 +821,18 @@ service wigignpt /vendor/bin/wigignpt
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKLG
     class late_start
+    disabled
+    oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABDKL
+    group system dhcp
+    class main
+    disabled
+    oneshot
+
+service iprenew_eth0 /system/bin/dhcpcd -n
+    group system dhcp
+    class main
     disabled
     oneshot
 
@@ -975,17 +986,9 @@ service qti-testscripts /system/bin/sh /system/etc/init.qcom.testscripts.sh
     oneshot
     seclabel u:r:qti-testscripts:s0
 
-service fix_baseband /vendor/bin/fix_baseband.sh
-    class late_start
-    user system
-    group shell
-    oneshot
-    disabled
-
 on property:sys.boot_completed=1
     start qcom-post-boot
     start qti-testscripts
-    start fix_baseband
 
 on property:ro.vendor.ril.mbn_copy_completed=1
     write /data/vendor/radio/copy_complete 1
@@ -1176,6 +1179,16 @@ service power_off_alarm /vendor/bin/power_off_alarm
     group system
     disabled
     oneshot
+
+service hostapd_cmd /vendor/bin/hostapd_cmd
+    class main
+    group system wifi
+    user root
+    oneshot
+    disabled
+
+on property:persist.sys.wifi.hostapd.cmd=*
+    start hostapd_cmd
 
 service vendor.move_time_data /system/bin/move_time_data.sh
     class main
